# dot

./: .gitignore  Cargo.lock.ws  Cargo.toml  Cargo.toml.ws  doti.sh
.cargo/: config.toml
assets/html/: auth.html  index.html
c/clp/: r
c/clp/src/: graph.c  queue.c  repl.c
do-core/: Cargo.toml
do-core/do-cloud/: Cargo.toml
do-core/src/: lib.rs  repl.rs
do-core/src/fs/: mod.rs
do-core/src/util/: mod.rs
do-cur/: Cargo.toml
do-http/: Cargo.toml
do-http/src/: lib.rs
do-http/src/context/: mod.rs
do-http/src/routes/: mod.rs
do-http/src/server/: mod.rs  tcp.rs  udp.rs
do-http/src/types/: mod.rs
do-rpc/: Cargo.toml  build.rs.old
do-rpc/proto/: doti.proto
do-rpc/src/: server.rs
do-tui/: Cargo.toml
do-tui/src/: main.rs
lib/c/clp/: r  repl  x
lib/c/clp/scripts/: r
lib/c/clp/src/: queue.h  repl.c
lib/py/docl/: main.py  pyproject.toml
lib/py/dotu/: main.py  pyproject.toml
lib/py/doui/: pyproject.toml
src/: lib.rs
src/job/: mod.rs  script.rs  step.rs
src/queue/: mod.rs
src/signal/: mod.rs
