[package]
name = "do-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8.0"
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.5.0"

[build-dependencies]
tonic-build = "0.5.0"
