[tool.poetry]
name = "do-tui"
version = "0.1.0"
description = ""
authors = ["Chris Pecunies <clp@clp.is>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
rich = "^10.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
